--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,6 @@
 .home-container{
     height: 100vh;
-    width: 100%;
-
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
