--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -2,6 +2,8 @@
     height: 100vh;
     width: 100vw;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .top-row{
@@ -19,16 +21,15 @@
 }
 
 .signup-items{
-    width: 262px;
     height: max-content;
-    margin: auto;
+    width: 262px;
     display: flex;
     flex-direction: column;
     gap: 10px;
 
-    padding: 25px;
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.244);
+    padding: 25px;
 
     justify-content: center;
     align-items: center;
@@ -50,4 +51,28 @@
     font-size: 10px;
     margin-top: -15px;
     color: gray;
+}
+
+@media screen and (max-width: 390px) {
+    .signup-items{
+        margin-inline: 20px;
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 250px) {
+    .button-container{
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .hint{
+        display: none;
+    }
+}
+
+@media screen and (max-height: 450px) {
+    .signup-container{
+        margin-top: 50px;
+    }
 }
