--- a/src/css/user.css
+++ b/src/css/user.css
@@ -1,14 +1,14 @@
 .maincontainer{
     width: 100vw;
     height: 100vh;
-    margin: 80px auto auto auto;
+    margin: 80px;
+    justify-content: center;
     display: flex;
     z-index: 0;
 }
 
 .usercontainer{
-    margin-left: auto;
-    margin-right: auto;
+    align-items: center;
     padding: 10px;
     display: flex;
     flex-direction: row;
@@ -30,5 +30,11 @@
 
     .contacts{
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 430px){
+    .usercontainer{
+        margin-inline: 10px;
     }
 }
