--- a/src/css/user.css
+++ b/src/css/user.css
@@ -2,12 +2,13 @@
     width: 100vw;
     height: 100vh;
     margin: 80px;
-    align-items: center;
+    justify-content: center;
     display: flex;
     z-index: 0;
 }
 
 .usercontainer{
+    justify-content: center;
     padding: 10px;
     display: flex;
     flex-direction: row;
