--- a/src/css/user.css
+++ b/src/css/user.css
@@ -26,9 +26,11 @@
     .usercontainer{
         flex-direction: column;
         align-items: center;
+        justify-content: none;
     }
 
     .contacts{
         align-items: center;
+        justify-content: none;
     }
 }
