--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
+html{
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
