--- a/src/css/home.css
+++ b/src/css/home.css
@@ -11,8 +11,17 @@
     background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 950px){
-    .home-container{
-        height: 100vh;
-    }
+.footer p{
+    cursor: default;
+}
+
+.footer a{
+    transition: 0.2s;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+.footer a:hover{
+    color: crimson;
 }
