--- a/src/Components/ComponentCss/contactcard.css
+++ b/src/Components/ComponentCss/contactcard.css
@@ -76,7 +76,7 @@
 
 @media  screen and (max-width: 840px) {
     .contactcardcontainer{
-        font-size: larger;
+        font-size: large;
     }
 }
 
