--- a/src/css/add.css
+++ b/src/css/add.css
@@ -4,5 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+}
+
+.import > input{
+    display: none;
+    visibility: none;
 }
